# ros_pkgs

./: .gitignore  README.md  build.sh
src/inverse_kinematics/bio_ik/: CMakeLists.txt  bio_ik_kinematics_description.xml  package.xml
src/inverse_kinematics/bio_ik/src/: bio_ik_parameters.yaml  kinematics_plugin.cpp
src/inverse_kinematics/pick_ik/: CMakeLists.txt  package.xml  pick_ik_kinematics_description.xml
src/inverse_kinematics/pick_ik/src/: pick_ik_plugin.cpp
src/inverse_kinematics/trac_ik/trac_ik_examples/src/: ik_tests.cpp
src/inverse_kinematics/trac_ik/trac_ik_kinematics_plugin/: CMakeLists.txt  package.xml  trac_ik_kinematics_description.xml
src/inverse_kinematics/trac_ik/trac_ik_kinematics_plugin/include/trac_ik/: trac_ik_kinematics_plugin.hpp
src/inverse_kinematics/trac_ik/trac_ik_kinematics_plugin/src/: trac_ik_kinematics_parameters.yaml  trac_ik_kinematics_plugin.cpp
src/moveit2/moveit_configs_utils/moveit_configs_utils/: moveit_configs_builder.py
src/moveit2/moveit_kinematics/cached_ik_kinematics_plugin/: CMakeLists.txt
src/moveit2/moveit_planners/chomp/chomp_interface/: CMakeLists.txt
src/moveit2/moveit_planners/chomp/chomp_interface/src/: chomp_interface.cpp  chomp_planning_context.cpp  chomp_plugin.cpp
src/moveit2/moveit_planners/chomp/chomp_motion_planner/include/chomp_motion_planner/: chomp_parameters.h
src/moveit2/moveit_planners/chomp/chomp_motion_planner/src/: chomp_parameters.cpp
src/moveit2/moveit_planners/moveit_planners/: package.xml
src/moveit2/moveit_planners/ompl/: CMakeLists.txt
src/moveit2/moveit_planners/ompl/ompl_interface/: CMakeLists.txt
src/moveit2/moveit_ros/planning/planning_pipeline/include/moveit/planning_pipeline/: planning_pipeline.h
src/moveit2/moveit_ros/visualization/planning_scene_rviz_plugin/include/moveit/planning_scene_rviz_plugin/: background_processing.hpp
src/moveit2/moveit_ros/visualization/planning_scene_rviz_plugin/src/: background_processing.cpp
src/moveit_resources/panda_moveit_config/: .setup_assistant
src/moveit_resources/panda_moveit_config/config/: panda.urdf.xacro  panda_arm_hand.srdf.xacro
